# btx

./: Cargo.toml  README.md  install.sh  setup.sh
.github/workflows/: release.yml
src/: agent.rs  bluez.rs  connect.rs  main.rs  model.rs  palette.rs
src/ui/: body.rs  footer.rs  header.rs  mod.rs  popups.rs
